tidying up the project

--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/lodash": "^4.17.20",
     "bson": "^6.10.4",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
