--- a/web/angular.json
+++ b/web/angular.json
@@ -35,6 +35,7 @@
               "node_modules/tailwindcss/index.css",
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
+              "node_modules/@taiga-ui/styles/taiga-ui-global.less",
               "node_modules/@taiga-ui/addon-mobile/styles/taiga-ui-mobile.less",
               "src/styles.less"
             ],
