--- a/web/package.json
+++ b/web/package.json
@@ -32,14 +32,15 @@
     "@angular/ssr": "^20.1.5",
     "@ng-web-apis/universal": "^3.2.3",
     "@taiga-ui/addon-commerce": "^4.48.0",
-    "@taiga-ui/addon-mobile": "^4.48.0",
-    "@taiga-ui/addon-table": "^4.48.0",
-    "@taiga-ui/cdk": "^4.48.0",
-    "@taiga-ui/core": "^4.48.0",
+    "@taiga-ui/addon-mobile": "^4.49.0",
+    "@taiga-ui/addon-table": "^4.49.0",
+    "@taiga-ui/cdk": "^4.49.0",
+    "@taiga-ui/core": "^4.49.0",
     "@taiga-ui/event-plugins": "^4.0.2",
-    "@taiga-ui/icons": "^4.48.0",
-    "@taiga-ui/kit": "^4.48.0",
-    "@taiga-ui/layout": "^4.48.0",
+    "@taiga-ui/icons": "^4.49.0",
+    "@taiga-ui/kit": "^4.49.0",
+    "@taiga-ui/layout": "^4.49.0",
+    "@taiga-ui/styles": "^4.49.0",
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
     "less": "^4.4.0",
