--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@types/lodash": "^4.17.20",
     "bson": "^6.10.4",
     "lodash": "^4.17.21",
+    "nedb": "^1.8.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
