--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,10 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
     "@types/nedb": "^1.8.16",
+    "bcrypt": "^6.0.0",
     "bson": "^6.10.4",
     "lodash": "^4.17.21",
     "nedb": "^1.8.0",
