--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^6.0.0",
     "bson": "^6.10.4",
+    "connect-nedb-session": "^0.0.3",
     "express-session": "^1.18.2",
     "lodash": "^4.17.21",
     "nedb": "^1.8.0",
@@ -38,14 +39,14 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
-    "@types/node": "^22.10.7",
-    "@types/supertest": "^6.0.2",
-    "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
     "@types/nedb": "^1.8.16",
+    "@types/node": "^22.10.7",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
