--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "express": "^5.1.0",
     "less": "^4.4.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
