--- a/server/package.json
+++ b/server/package.json
@@ -26,10 +26,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^6.0.0",
     "bson": "^6.10.4",
-    "connect-nedb-session": "^0.0.3",
     "express-session": "^1.18.2",
     "lodash": "^4.17.21",
     "nedb": "^1.8.0",
+    "nedb-session-store": "^1.1.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
